# lambda-calculus

./: README.md  lambda-calculus.cabal  stack.yaml
.stack-work/: stack.sqlite3
.stack-work/ghci/f01ad983/: cabal_macros.h
.stack-work/install/aarch64-osx/8d965f67ab8bf1eba2835605c7e8271c7bd21ee6f3e5f5e2850e1f6eb270e80a/9.8.4/doc/: doc-index.html  index.html
.stack-work/install/aarch64-osx/8d965f67ab8bf1eba2835605c7e8271c7bd21ee6f3e5f5e2850e1f6eb270e80a/9.8.4/doc/all/: doc-index-33.html  doc-index-36.html  doc-index-37.html  doc-index-42.html  doc-index-43.html  doc-index-45.html  doc-index-46.html  doc-index-47.html  doc-index-58.html  doc-index-60.html  doc-index-61.html  doc-index-62.html  doc-index-94.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index-X.html  doc-index-Y.html  doc-index-Z.html  (+1 more)
.stack-work/install/aarch64-osx/8d965f67ab8bf1eba2835605c7e8271c7bd21ee6f3e5f5e2850e1f6eb270e80a/9.8.4/doc/case-insensitive-1.2.1.0/: Data-CaseInsensitive-Unsafe.html  Data-CaseInsensitive.html  case-insensitive.haddock  doc-index.html  doc-index.json  index.html
.stack-work/install/aarch64-osx/8d965f67ab8bf1eba2835605c7e8271c7bd21ee6f3e5f5e2850e1f6eb270e80a/9.8.4/doc/lambda-calculus-0.1.0.0/: Evaluator.html  doc-index.json  index.html  lambda-calculus.txt
.stack-work/install/aarch64-osx/8d965f67ab8bf1eba2835605c7e8271c7bd21ee6f3e5f5e2850e1f6eb270e80a/9.8.4/doc/megaparsec-9.6.1/: Text-Megaparsec-Byte-Binary.html  Text-Megaparsec-Byte-Lexer.html  Text-Megaparsec-Byte.html  Text-Megaparsec-Char-Lexer.html  Text-Megaparsec-Char.html  Text-Megaparsec-Debug.html  Text-Megaparsec-Error-Builder.html  Text-Megaparsec-Error.html  Text-Megaparsec-Internal.html  Text-Megaparsec-Pos.html  Text-Megaparsec-State.html  Text-Megaparsec-Stream.html  Text-Megaparsec.html  doc-index-60.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  (+6 more)
.stack-work/install/aarch64-osx/8d965f67ab8bf1eba2835605c7e8271c7bd21ee6f3e5f5e2850e1f6eb270e80a/9.8.4/pkgdb/: lambda-calculus-0.1.0.0-56ZnaPOEiKyBuSy8NURn3q.conf  package.cache
.stack-work/install/aarch64-osx/b9a4555b918640aad268600500670e25523014a777fc83101b6cabaadbd70b79/9.8.4/pkgdb/: lambda-calculus-0.1.0.0-56ZnaPOEiKyBuSy8NURn3q.conf  package.cache
src/: Evaluator.hs  LambdaAST.hs  Main.hs  Parser.hs  notes.md
test/: LambdaTest.hs  Main.hs
(+101 files in other folders)
