cabal-version:       2.2

name:                lambda-calculus
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/lambda-calculus#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable lambda-calculus
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       LambdaAST, Parser, Evaluator
  default-language:    Haskell2010
  build-depends:
    base >= 4.7 && < 5
    , megaparsec >= 9.0
    , text
    , mtl
    , prettyprinter
    , QuickCheck

  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints
